First stab at daily km, just returning the raw response
